--- a/Chapters.css
+++ b/Chapters.css
@@ -1,7 +1,7 @@
-<link> href="Stills.html" </link>
+<link> href="Chapters.html" </link>
 
 body {
-	background-color: #D0E9FF;
+    background-color: #D0E9FF;
 }
 
 .nav {
@@ -9,7 +9,7 @@ body {
     margin-bottom: 50px;
     margin-right: auto;
     margin-left: auto;
-    background-color:#3F70FF;
+    background-color:#E3CEA8;
     overflow: hidden;
     width: 1000px;
     text-align: center;
@@ -17,7 +17,8 @@ body {
 }
 
 .nav li {
-    width: 120px; border-left: 5px solif #666;
+    width: 120px; 
+    border-left: 5px solif #666;
     float: left;
     cursor: pointer;
     list-style-type: none;
@@ -35,41 +36,57 @@ body {
     border-left: 5px solid #000;
 }
 
-a:active {
-    color: white;
+.nav a:active {
+    color: black;
     text-decoration: none;
 }
-a:visited {
-    color: white;
+.nav a:visited {
+    color: black;
 }
-a:hover {
+.nav a:hover {
     color: black;
 }
 
 h1 {
-	color: white;
-	font-family: Orator STD, Courier, Helvetica, sans-serif;
-	font-size: ;
-	text-align: center;
-	}
+    color: black;
+    font-family: "Orator STD", Courier, Helvetica, sans-serif;
+    text-align: center;
+    }
 
 p {
-	color: white;
-	font-family: Orator STD, Courier, Helvetica, sans-serif;
-	text-align: center;
-	font-size: ;
+    color: red;
+    font-family: "Orator STD", Courier, Helvetica, sans-serif;
+    text-align: center;
 }
 
 h2 {
-	color: white;
-	font-family: Orator STD, Courier, Helvetica, sans-serif;
-	font-size: ;
-	text-align: center;
-	margin-top: 50px;
+    color: white;
+    font-family: "Orator STD", Courier, Helvetica, sans-serif;
+    font-size: ;
+    text-align: center;
+    margin-top: 50px;
+}
+
+h3 {
+    color: black;
+    font-family: "Orator STD", Courier, Helvetica, sans-serif;
+    text-align: center;
+}
+a:active {
+    text-decoration: none;
+    font-family: "Orator STD", Courier, Helvetica, sans-serif;
+    color: red;
+    text-align: center;
+}
+a:visited {
+    text-decoration: none;
+    font-family: "Orator STD", Courier, Helvetica, sans-serif;
+    color: red;
+    text-align: center;
 }
 
 footer {
-    font-family: Orator STD, Courier, Helvetica, sans-serif;
+    font-family: "Orator STD", Courier, Helvetica, sans-serif;
     color: white;
     text-align: center;
     margin-bottom: 0px;
@@ -77,7 +94,6 @@ footer {
     margin-right: 250px;
     margin-left: 250px;
 }
-
 
 #background {
     position: fixed;
@@ -95,6 +111,6 @@ footer {
 }
 /* Start http://www.cursors-4u.com */ 
 body, a:hover {
-	cursor: url(http://cur.cursors-4u.net/cursors/cur-3/cur239.ani), url(http://cur.cursors-4u.net/cursors/cur-3/cur239.png), progress !important;
+    cursor: url(http://cur.cursors-4u.net/cursors/cur-3/cur239.ani), url(http://cur.cursors-4u.net/cursors/cur-3/cur239.png), progress !important;
 } 
 /* End http://www.cursors-4u.com */
